[Style] input 설명창 추가

--- a/src/assets/scss/pages/_findMain.scss
+++ b/src/assets/scss/pages/_findMain.scss
@@ -60,5 +60,10 @@ main[data-component="main__form__wrapper"] {
     .main__input-box {
       width: 100%;
     }
+    .main__input--description {
+      font-size: 12px;
+      color: #618bdf;
+      text-decoration: underline;
+    }
   }
 }
