[API] newPassword 등록 api 완료

--- a/src/assets/scss/components/_button.scss
+++ b/src/assets/scss/components/_button.scss
@@ -44,14 +44,13 @@
     border: 1px solid variables.$footer__btn--point;
   }
   .main__btn--cancel {
-    // @extend %header__menu-font;
-    // @extend .main__btn-wrapper;
-    // width: 90px;
-    // height: 48px;
     @extend .main__btn--next;
     color: #434a54 !important;
     background-color: white;
     border: 1px solid #adadad !important;
     margin-right: 10px;
+  }
+  .main__btn--complete {
+    @extend .main__btn--next;
   }
 }
