--- a/src/pages/route/FindEmail.hbs
+++ b/src/pages/route/FindEmail.hbs
@@ -1,24 +1,46 @@
 <div class="main__input-description">
-      회원정보에 등록된 이메일로 비밀번호를 찾을 수 있습니다.
-    </div>
+  회원정보에 등록된 이메일로 비밀번호를 찾을 수 있습니다.
+</div>
 <div class="main__input-form">
-    <div class="main__input-item">
-        <div class="main__input-title">아이디</div>
-        <div class="main__input-box">
-            <input class="main__input--fulled main__input" placeholder="아이디입력">
-        </div>
+  <div class="main__input-item">
+    <div class="main__input-title">아이디</div>
+    <div class="main__input-box">
+      <input
+        class="main__input--fulled main__input"
+        id="input__id--email"
+        placeholder="아이디입력"
+      />
     </div>
-    <div class="main__input-item">
-        <div class="main__input-title">이름</div>
-        <div class="main__input-box">
-            <input class="main__input--fulled main__input" placeholder="가입자명">
-        </div>
+  </div>
+  <div class="main__input-item">
+    <div class="main__input-title">이름</div>
+    <div class="main__input-box">
+      <input
+        class="main__input--fulled main__input"
+        id="input__name--email"
+        placeholder="가입자명"
+      />
     </div>
-    <div class="main__input-item">
-        <div class="main__input-title">이메일</div>
-        <div class="main__input-box">
-            <input class="main__input main__input--fulled" placeholder="이메일 (예. example@email.com)">
-            <button type="button" class="main__input-btn--auth">인증</button>
-        </div>
+  </div>
+  <div class="main__input-item">
+    <div class="main__input-title">이메일</div>
+    <div class="main__input-box">
+      <input
+        class="main__input main__input--fulled"
+        placeholder="이메일 (예. example@email.com)"
+        id="input__email--email"
+      />
+      <button type="button" class="main__input-btn--auth">인증</button>
     </div>
+  </div>
+  <div class="main__input-item" id="main__input--certification">
+    <div class="main__input-title">인증번호</div>
+    <div class="main__input-box">
+      <input
+        class="main__input--fulled main__input"
+        placeholder="인증번호 8자리"
+        id="input__certification--email"
+      />
+    </div>
+  </div>
 </div>
