--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -10,5 +10,8 @@ body {
     .body__login-wrapper {
       margin: 0 40px;
     }
+    .body__mainpage-wrapper {
+      margin: 0 !important;
+    }
   }
 }
